# BlueSentinel

bluesentinel/: README.md  pyproject.toml
bluesentinel/docs/: ARCHITECTURE.md
bluesentinel/src/bluesentinel/: __main__.py  bootstrap.py  core_config.py
bluesentinel/src/bluesentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bluesentinel/src/bluesentinel/application/detection/: investigation_service.py
bluesentinel/src/bluesentinel/application/ioc/: ioc_service.py
bluesentinel/src/bluesentinel/domain/: exceptions.py
bluesentinel/src/bluesentinel/domain/detection/: mitre_coverage.py  sigma_evaluator.py  sigma_parser.py  sigma_rule.py
bluesentinel/src/bluesentinel/domain/entities/: case.py  ioc.py  windows_event.py
bluesentinel/src/bluesentinel/domain/forensics/: process_tree.py
bluesentinel/src/bluesentinel/domain/repositories/: ioc_repository.py
bluesentinel/src/bluesentinel/domain/value_objects/: enums.py
bluesentinel/src/bluesentinel/infrastructure/db/: base.py  models.py
bluesentinel/src/bluesentinel/infrastructure/demo_data/: attack_scenario.py
bluesentinel/src/bluesentinel/infrastructure/logging/: setup.py
bluesentinel/src/bluesentinel/infrastructure/mitre/: technique_catalog.py
bluesentinel/src/bluesentinel/infrastructure/rules/: rule_pack_loader.py
bluesentinel/src/bluesentinel/presentation/: main_window.py
bluesentinel/tests/: conftest.py
bluesentinel/tests/integration/: test_full_attack_scenario.py  test_ioc_repository_sqlite.py
bluesentinel/tests/unit/application/: fakes.py  test_ioc_service.py
bluesentinel/tests/unit/domain/: test_case_entity.py  test_ioc_entity.py  test_process_tree.py  test_sigma_condition_grammar.py  test_sigma_evaluator.py  test_sigma_parser.py
(+15 files in other folders)
