[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesentinel"
version = "0.1.0"
description = "BlueSentinel — Defensive Security Operations Platform for SOC Analysts and Incident Responders"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "BlueSentinel Project" }]
keywords = ["blue-team", "soc", "incident-response", "sigma", "mitre-attack", "dfir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PySide6>=6.7.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "reportlab>=4.2.0",
    "yara-python>=4.5.0",
    "python-evtx>=0.7.4",
    "stix2>=3.0.1",
    "requests>=2.32.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
bluesentinel = "bluesentinel.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=bluesentinel --cov-report=term-missing"
testpaths = ["tests"]
qt_api = "pyside6"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
